--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,23 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Rinbo Consulting
+email: info@rinbo-consulting.co.uk
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A mixture of thoughts on Business Intelligence, MicroStrategy, and IT in general 
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://www.rinbo.co.uk" # the base hostname & protocol for your site
+twitter_username: rinboconsulting
+github_username:  rinboconsulting
 
 # Build settings
 markdown: kramdown
 
 include:
-	- .nojekyll
+  - ".nojekyll"
 
 exclude:
-	- "Gruntfile.js"
-    - "node_modules"
-    - "package.json"
-	- "bower_components"
-	- "bower.json"
+  - "Rakefile"
+  - "Gruntfile.js"
+  - "node_modules"
+  - "package.json"
+  - "bower_components"
+  - "bower.json"
