--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ include:
 exclude:
   - ".gitignore"
   - "Rakefile"
-  - "Gruntfile.js"
+  - "Gruntfile.coffee"
   - "node_modules"
   - "package.json"
   - "bower_components"
