--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: Rinbo Consulting
-email: info@rinbo-consulting.co.uk
+email: info@rinbo.consulting
 description: > # this means to ignore newlines until "baseurl:"
   A mixture of thoughts on Business Intelligence, MicroStrategy, and IT in general 
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://www.rinbo-consulting.co.uk" # the base hostname & protocol for your site
+url: "http://rinbo.consulting" # the base hostname & protocol for your site
 twitter_username: rinboconsulting
 github_username:  rinbo-consulting
 
